# headlines

./: .gitignore  Cargo.toml  Dockerfile.Api  Dockerfile.Crawler  README.md  docker-compose.yml
.github/workflows/: publish-release-api.yml  publish-release-crawler.yml
docs/: index.html
src/: HeadlineVersionsRepository.rs  feeds_repository.rs  headline_versions_repository.rs  headlines_updated_stats_repository.rs  lib.rs  main.rs
