[package]
name = "headlines"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.0.0-beta.3", default-features = false, features = ["tokio-runtime"]}
rss = "1.0"
reqwest = "0.11"
anyhow = "1.0"
futures = "0.3"
md5 = "0.7.0"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
